--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
-    "vuetify": "^2.6.0",
-    "vue-router": "^2.7.10"
+    "vue-router": "^2.8.1",
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
