--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "fs": "^0.0.1-security",
+    "handy-uploader": "^1.1.8",
     "vue": "^2.6.14",
-    "vuetify": "^2.6.0",
-    "vue-router": "^2.7.10"
+    "vue-router": "^2.7.10",
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
