--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "body-parser": "^1.19.0",
+        "body-parser": "^1.20.1",
         "cors": "^2.8.5",
+        "easy-save": "^1.0.5",
         "express": "^4.17.1",
         "mongoose": "^6.5.3",
         "nodemon": "^2.0.4"
