--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@google-cloud/storage": "^6.5.2",
+        "aws-sdk": "^2.1234.0",
+        "axios": "^1.1.3",
         "body-parser": "^1.20.1",
         "cors": "^2.8.5",
         "easy-save": "^1.0.5",
-        "express": "^4.17.1",
+        "express": "^4.18.2",
         "mongoose": "^6.5.3",
-        "nodemon": "^2.0.4"
+        "multer": "^1.4.5-lts.1",
+        "nodemon": "^2.0.4",
+        "upload-cloud-storage": "^1.0.5",
+        "uploader": "^2.1.0",
+        "uuid": "^9.0.0"
     }
 }
