--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
         "cors": "^2.8.5",
         "easy-save": "^1.0.5",
         "express": "^4.18.2",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.38",
         "mongoose": "^6.5.3",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.4",
