--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "fs": "^0.0.1-security",
     "handy-uploader": "^1.1.8",
+    "moment-timezone": "^0.5.38",
     "vue": "^2.6.14",
     "vue-router": "^2.7.10",
     "vuetify": "^2.6.0"
