--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "fs": "^0.0.1-security",
     "handy-uploader": "^1.1.8",
     "js-search": "^2.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
+    "material-design-icons-iconfont": "^6.7.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.38",
+    "printable-data-table": "^1.0.7",
     "vue": "^2.6.14",
     "vue-html-to-paper": "^1.4.4",
+    "vue-materialize-datatable": "^1.0.4",
     "vue-router": "^2.7.10",
     "vuetify": "^2.6.0"
   },
